--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 # SECRET KEY USING FOR JWT TOKEN
 jwt.secret=dieulinh
+
+# SETTING PREFIX FOR ALL PART OF CONTROLLER
+#
+#server.servlet.context-path=/api/v1
+logging.level.org=DEBUG
