adding the feature of the user controller and insert python file for scraping data from tiki into database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,4 @@ jwt.secret=dieulinh
 # SETTING PREFIX FOR ALL PART OF CONTROLLER
 #
 #server.servlet.context-path=/api/v1
-logging.level.org=DEBUG
+#logging.level.org=DEBUG
